# FleetBattle

./: CMakeLists.txt  LICENSE.md  README.md  build.sh
.github/workflows/: analyze.yml  analyzeAndBuild.yml  build.yml  removeAllRuns.yml
include/: agent.hpp  board.hpp  boardFactory.hpp  exceptions.hpp  game.hpp  gameFactory.hpp  matchMaster.hpp  matchMasterFactory.hpp  mt_shared_ptr.hpp  opponentBoard.hpp  player.hpp  playerBoard.hpp  playerFactory.hpp  ships.hpp  shipsLayer.hpp  types.hpp  utilities.hpp
src/: CMakeLists.txt  main.cpp
src/agent/: CMakeLists.txt  agent.cpp  functor.cpp  getOpponentBoard.cpp  getOwnBoard.cpp
src/board/: CMakeLists.txt  board.cpp  decodeCoordinates.cpp  decodedCoordinates.cpp  isCoordinatesValid.cpp
src/game/: CMakeLists.txt  functor.cpp  game.cpp
src/matchMaster/: CMakeLists.txt  functor.cpp  isShipSunk.cpp  matchMaster.cpp
src/opponentBoard/: CMakeLists.txt  getBoardStatus.cpp  getSquareStatus.cpp  hit.cpp  isSquareAlreadyHit.cpp  opponentBoard.cpp  setSquareStatus.cpp  shoot.cpp
src/player/: CMakeLists.txt  agentInput.cpp  checkOpponentBoard.cpp  checkOwnBoard.cpp  functor.cpp  getCommand.cpp  getOpponentBoard.cpp  getOtherBoardSquareStatus.cpp  getOwnBoard.cpp  getOwnBoardSquareStatus.cpp  getSquareStatus.cpp  player.cpp  setOtherBoardSquareStatus.cpp  setOwnBoardSquareStatus.cpp  setSquareStatus.cpp  shoot.cpp
src/playerBoard/: CMakeLists.txt  applyShipsLayer.cpp  checkOverlappingShips.cpp  checkShipSunk.cpp  deployShips.cpp  drawDeployedShipsOnBoard.cpp  getBoardStatus.cpp  getSquareStatus.cpp  hit.cpp  initiateDestroyedShips.cpp  initiateShipsLayer.cpp  isSquareAlreadyHit.cpp  playerBoard.cpp  setSquareStatus.cpp  shoot.cpp  squareStatus.cpp
src/ships/: CMakeLists.txt  addShip.cpp  editShip.cpp  removeShip.cpp  ships.cpp
src/utilities/: CMakeLists.txt  decodeCoordinates.cpp  isCoordinatesValid.cpp  isCrossingShipsOverlapping.cpp  isInlineShipsOverlapping.cpp  isShipHorizontal.cpp  isShipOverlapping.cpp  isShipVertical.cpp
